@@ -303,6 +303,8 @@ x2goserver (4.1.0.4-0x2go1.2) UNRELEASED; urgency=medium
       in-depth examination of program options parsing.
     - x2goserver/lib/x2goupdateoptionsstring: add mode selection
       functionality.
+    - X2Go/Server/Agent/NX/Options.pm: port modes "enum" subs to the constant
+      pragma to make the code more consistent with the program wrapper.
   * debian/control:
     + Build-depend upon lsb-release for distro version detection.
   * debian/x2goserver.manpages:
